force-app/main/default/objects/Module__c/fields/Amenity_Description__c.field-meta.xml
<CustomField>
    <fullName>Amenity_Description__c</fullName>
    <description>Amenity Description</description>
    <inlineHelpText>Enter Amenity Description</inlineHelpText>
    <label>Amenity Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>