force-app/main/default/objects/Module__c/fields/Amenity_Image__c.field-meta.xml
<CustomField>
    <fullName>Amenity_Image__c</fullName>
    <description>Amenity Image</description>
    <inlineHelpText>Add Amenity Image</inlineHelpText>
    <label>Amenity Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>