force-app/main/default/objects/Module__c/fields/Amenity_Title__c.field-meta.xml
<CustomField>
    <fullName>Amenity_Title__c</fullName>
    <description>Amenity Title</description>
    <inlineHelpText>Enter Amenity Title</inlineHelpText>
    <label>Amenity Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>