force-app/main/default/objects/Module__c/fields/Amenity_Type__c.field-meta.xml
<CustomField>
    <fullName>Amenity_Type__c</fullName>
    <description>Amenity Type</description>
    <inlineHelpText>Enter Amenity Type</inlineHelpText>
    <label>Amenity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amenity</fullName>
            </value>
            <value>
                <fullName>Club_House</fullName>
                <label>Club House</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>