force-app/main/default/objects/Module__c/fields/Balcony__c.field-meta.xml
<CustomField>
    <fullName>Balcony__c</fullName>
    <description>Balcony</description>
    <inlineHelpText>Balcony area in Sq Ft</inlineHelpText>
    <label>Balcony</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>