force-app/main/default/objects/Module__c/fields/Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area__c</fullName>
    <description>Carpet Area</description>
    <inlineHelpText>Carpet Area in Sq Ft</inlineHelpText>
    <label>Carpet Area</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>