force-app/main/default/objects/Module__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Unit Category</description>
    <inlineHelpText>Select Unit Category</inlineHelpText>
    <label>Unit Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Royal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>