force-app/main/default/objects/Module__c/fields/Facing__c.field-meta.xml
<CustomField>
    <fullName>Facing__c</fullName>
    <label>Facing</label>
    <length>80</length>
    <type>Text</type>
</CustomField>