force-app/main/default/objects/Module__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be displayed when Record type is unit, to select floor.This is self lookup</description>
    <inlineHelpText>Select Floor</inlineHelpText>
    <label>Floor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Module__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Floor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Modules2</relationshipName>
    <type>Lookup</type>
</CustomField>