force-app/main/default/objects/Module__c/fields/Floor_Image__c.field-meta.xml
<CustomField>
    <fullName>Floor_Image__c</fullName>
    <description>Floor Image</description>
    <inlineHelpText>Add Floor Image</inlineHelpText>
    <label>Floor Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>