force-app/main/default/objects/Module__c/fields/Floor_Name__c.field-meta.xml
<CustomField>
    <fullName>Floor_Name__c</fullName>
    <description>Floor Name</description>
    <inlineHelpText>Enter Floor Name</inlineHelpText>
    <label>Floor Name</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>