force-app/main/default/objects/Module__c/fields/FloorPlan__c.field-meta.xml
<CustomField>
    <fullName>FloorPlan__c</fullName>
    <label>Units linked with Floor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>