force-app/main/default/objects/Module__c/fields/has_wing__c.field-meta.xml
<CustomField>
    <fullName>has_wing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field indicates whether the tower has wing or not</description>
    <label>Do the Tower have wings?</label>
    <type>Checkbox</type>
</CustomField>