force-app/main/default/objects/Module__c/fields/Price_Per_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Sqft__c</fullName>
    <description>Price Per Sqft</description>
    <inlineHelpText>Enter Price Per Sq ft</inlineHelpText>
    <label>Price Per Sqft</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>