force-app/main/default/objects/Module__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Master-Detail relation to Project</description>
    <inlineHelpText>Select Project</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Towers, Amenities, Specifications</relationshipLabel>
    <relationshipName>Modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>