force-app/main/default/objects/Module__c/fields/Specification_Description__c.field-meta.xml
<CustomField>
    <fullName>Specification_Description__c</fullName>
    <description>Specification Description</description>
    <inlineHelpText>Enter Specification Description</inlineHelpText>
    <label>Specification Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>