force-app/main/default/objects/Module__c/fields/Specification_Image__c.field-meta.xml
<CustomField>
    <fullName>Specification_Image__c</fullName>
    <label>Specification Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>