force-app/main/default/objects/Module__c/fields/Specification_Title__c.field-meta.xml
<CustomField>
    <fullName>Specification_Title__c</fullName>
    <description>Specification Title</description>
    <inlineHelpText>Enter Specification Title</inlineHelpText>
    <label>Specification Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>