force-app/main/default/objects/Module__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Total Price</description>
    <inlineHelpText>Total Price</inlineHelpText>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>