force-app/main/default/objects/Module__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self Lookup on Module__c . This is for Tower which will be displayed on Wing Record Type</description>
    <inlineHelpText>Select Tower</inlineHelpText>
    <label>Tower</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Module__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Tower</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Wings</relationshipLabel>
    <relationshipName>Modules</relationshipName>
    <type>Lookup</type>
</CustomField>