force-app/main/default/objects/Module__c/fields/Tower_Name__c.field-meta.xml
<CustomField>
    <fullName>Tower_Name__c</fullName>
    <description>Tower Name</description>
    <inlineHelpText>Enter Tower Name</inlineHelpText>
    <label>Tower Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>