force-app/main/default/objects/Module__c/fields/UniqueCode__c.field-meta.xml
<CustomField>
    <fullName>UniqueCode__c</fullName>
    <description>Unique code</description>
    <formula>IF(
    RecordType.Name = &apos;Tower&apos;,
    Project__r.Name &amp; &quot;-&quot; &amp; Tower_Name__c,
    IF(
        RecordType.Name = &apos;Wing&apos;,
        Tower__r.Project__r.Name &amp; &quot;-&quot; &amp; Tower__r.Tower_Name__c &amp; &quot;-&quot; &amp; Wing_Name__c,
        IF(
            RecordType.Name = &apos;Floor&apos;,
            Wing__r.Tower__r.Project__r.Name &amp; &quot;-&quot; &amp; Wing__r.Tower__r.Tower_Name__c &amp; &quot;-&quot; &amp; Wing__r.Wing_Name__c &amp; &quot;-&quot; ,
            IF(
                RecordType.Name = &apos;Unit&apos;,
                Floor__r.Wing__r.Tower__r.Project__r.Name &amp; &quot;-&quot; &amp; Floor__r.Wing__r.Tower__r.Tower_Name__c &amp; &quot;-&quot; &amp; Floor__r.Wing__r.Wing_Name__c &amp; &quot;-&quot;&amp; &quot;-&quot; &amp; Unit_Name__c,
                &apos;&apos;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unique code</inlineHelpText>
    <label>UniqueCode</label>
    <type>Text</type>
</CustomField>