force-app/main/default/objects/Module__c/fields/Unit_Bathroom_Count__c.field-meta.xml
<CustomField>
    <fullName>Unit_Bathroom_Count__c</fullName>
    <description>Unit Bathroom Count</description>
    <inlineHelpText>Unit Bathroom Count</inlineHelpText>
    <label>Unit Bathroom Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>