force-app/main/default/objects/Module__c/fields/Unit_Bedroom_Count__c.field-meta.xml
<CustomField>
    <fullName>Unit_Bedroom_Count__c</fullName>
    <description>Unit Bedroom Count</description>
    <inlineHelpText>Enter Unit Bedroom Count</inlineHelpText>
    <label>Unit Bedroom Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>