force-app/main/default/objects/Module__c/fields/Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>Unit_Description__c</fullName>
    <description>Unit Description</description>
    <inlineHelpText>Enter Unit Description</inlineHelpText>
    <label>Unit Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>