force-app/main/default/objects/Module__c/fields/Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Name__c</fullName>
    <description>Unit Name</description>
    <inlineHelpText>Enter Unit Name</inlineHelpText>
    <label>Unit Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>