force-app/main/default/objects/Module__c/fields/Unit_Plan_Image__c.field-meta.xml
<CustomField>
    <fullName>Unit_Plan_Image__c</fullName>
    <description>Unit Plan Image</description>
    <inlineHelpText>Add Unit Plan Image</inlineHelpText>
    <label>Unit Plan Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>