force-app/main/default/objects/Module__c/fields/Wing__c.field-meta.xml
<CustomField>
    <fullName>Wing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to show Wing when record Type is Floor. Self Lookup</description>
    <inlineHelpText>Select Wing</inlineHelpText>
    <label>Wing</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Module__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Wing</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Floors</relationshipLabel>
    <relationshipName>Modules1</relationshipName>
    <type>Lookup</type>
</CustomField>