force-app/main/default/objects/Module__c/fields/Wing_Name__c.field-meta.xml
<CustomField>
    <fullName>Wing_Name__c</fullName>
    <description>Wing Name</description>
    <inlineHelpText>Enter Wing Name</inlineHelpText>
    <label>Wing Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>