force-app/main/default/objects/Module__c/recordTypes/Amenities.recordType-meta.xml
<RecordType>
    <fullName>Amenities</fullName>
    <active>true</active>
    <description>Amenities of project</description>
    <label>Amenities</label>
</RecordType>