force-app/main/default/objects/Module__c/recordTypes/Floor.recordType-meta.xml
<RecordType>
    <fullName>Floor</fullName>
    <active>true</active>
    <description>Record Type for Floor</description>
    <label>Floor</label>
</RecordType>