force-app/main/default/objects/Module__c/recordTypes/Specifications.recordType-meta.xml
<RecordType>
    <fullName>Specifications</fullName>
    <active>true</active>
    <description>Specifications of project</description>
    <label>Specifications</label>
</RecordType>