force-app/main/default/objects/Module__c/recordTypes/Tower.recordType-meta.xml
<RecordType>
    <fullName>Tower</fullName>
    <active>true</active>
    <description>Record Type for Project Tower</description>
    <label>Tower</label>
</RecordType>