force-app/main/default/objects/Module__c/recordTypes/Unit.recordType-meta.xml
<RecordType>
    <fullName>Unit</fullName>
    <active>true</active>
    <description>Record Type for Unit</description>
    <label>Unit</label>
</RecordType>