force-app/main/default/objects/Module__c/recordTypes/Wing.recordType-meta.xml
<RecordType>
    <fullName>Wing</fullName>
    <active>true</active>
    <description>Record Type for Project Tower Wing</description>
    <label>Wing</label>
</RecordType>