force-app/main/default/objects/Module__c/validationRules/Validation_Floor_RecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Floor_RecordType</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 $RecordType.Name = &quot;Floor&quot;,
 ISBLANK( Tower__c ),
 OR (
     Tower__r.has_wing__c =true,
     ISBLANK( Wing__c )
   )
)</errorConditionFormula>
    <errorMessage>Please check the following fields :
* Tower (Lookup)
* Wing (Lookup)</errorMessage>
</ValidationRule>