force-app/main/default/objects/Module__c/validationRules/Validation_Unit_RecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Unit_RecordType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Unit&quot;,
OR(
     ISBLANK( Tower__c ),
     ISBLANK ( Floor__c ),
     AND(
         Tower__r.has_wing__c =true,
          ISBLANK( Wing__c )
)
)
)</errorConditionFormula>
    <errorMessage>Please check the following fields :
 * Tower (Lookup)
 * Floor (Lookup)
 * Wing (Lookup)</errorMessage>
</ValidationRule>