force-app/main/default/objects/Module__c/validationRules/Validation_Wing_RecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Wing_RecordType</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Wing&quot;,
ISBLANK( Tower__c )
)</errorConditionFormula>
    <errorMessage>Please select a Tower</errorMessage>
</ValidationRule>